--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-
-
-
 spring:
   profiles:
     active: local
@@ -8,8 +5,6 @@ spring:
       local: local, common
       blue: blue, common
       green: green, common
-
-
 
 server:
   env: blue
@@ -99,13 +94,27 @@ spring:
           auth: true
           starttls:
             enable: true
-
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${OAUTH2_GOOGLE_CLIENT_ID}
+            client-secret: ${OAUTH2_GOOGLE_CLIENT_SECRET}
+            scope: openid, profile, email
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            client-authentication-method: post
+        provider:
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://oauth2.googleapis.com/token
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
 
 logging:
   level:
     root: INFO
     woongjin.gatherMind: DEBUG
-
+    org.springframework.security: DEBUG
 #    org:
 #      hibernate:
 #        SQL: DEBUG
